# XOPlay

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
bot/: CMakeLists.txt  bot.cpp  bot.h
bot/commands/: command.h  get_history_command.h  help_command.h  make_move_command.h  send_message_command.h  start_game_command.h  stop_game_command.h
config/: CMakeLists.txt  config.cpp  config.h
db/: CMakeLists.txt  db.cpp  db.h  db_service.cpp  db_service.h
db/init/: init.sql
game/: CMakeLists.txt  game.cpp  game.h  game_exception.h  game_logic.cpp  game_logic.h  game_service.cpp  game_service.h
src/: main.cpp
task_manager/: CMakeLists.txt  task_manager.cpp  task_manager.h
task_manager/task/: get_history_task.h  help_task.h  make_move_task.h  send_message_task.h  start_game_task.h  stop_game_task.h  task.h  task_params.h
tests/: CMakeLists.txt
tests/game/: game_service_test.cpp
thread_pool/: CMakeLists.txt  thread_pool.cpp  thread_pool.h  threadsafe_queue.h
